Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.2.0
	 * Save:	8
	 * Network:	12

	Android		63
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	2
	Increment1GUI:	2
	CommandLine:	2

1.2.0

	better support for hi-res windows (no more blurry text)
	right click to get maps by same author works better
	fix for game not working when space in host name
	MapEditor: more information shown when publishing new map
	MapEditor: action buttons affect only selected countries
	MapEditor: better (cross OS) filename validation for saving maps

1.1.1.7

	Fix for 'Top Rated' being broken on PC Domination.
	Swedish translation update by sa-w w waara09
	Fix for hi-res mouse wheel getting UI stuck
	Can create online games with average AI on PC version

	Android 65 new look for online games list, now shows player names
		   google play games login now allows to play on multiple devices
		   updated to the latest version of google play games
	Android 64 fix bug with Bitmap.getDensity sometimes returning 0
	Android 63 Sending a message from inside game added
		   show last few chat messages in chat window
		   shows how many of each type of AI in online game description

1.1.1.6

	OS X java 1.7 maps dir missing deadlock fix
	OS X java 1.7 open html help in browser fix
	OS X .app launches on latest version of java
	pt_PT update by Pipanni
	SwingGUI sends more info on crash and feedback
	Greek added
	Support for windows hi-dpi screens added
	Support for online play with any map added
	MapEditor: can select what Islands to delete.
	Resign button added in menu of FlashGUI for online play

	Android 62 can toggle showing dice results in game options
		   isGame=true added to android manifest
		   saves default new game settings after a game is created
	Android 61 Bugs with Map updating fixed
		   Sending a saved game added to save game dialog
	Android 60 Cards dialog shows when the game has no cards to give
		   error reports now have an error Signature